make some adjustments to creating/adding a user
